--- a/app/globals.css
+++ b/app/globals.css
@@ -98,3 +98,24 @@
     100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
 }
 /* End */
+
+/* Table */
+table td{
+  @apply p-2;
+  border: 1px solid #bec5d6;
+  border-collapse: collapse;  
+}
+tbody tr {
+  @apply text-center
+}
+tbody tr:nth-child(odd) {
+  background-color:#e9f1f8da;
+}
+tbody tr:nth-child(even) {
+  background-color:#fff;
+}
+table button {
+  @apply w-full h-full hover:bg-bluePrimary hover:text-white transform ease-linear duration-200
+}
+
+/* end */
