--- a/app/globals.css
+++ b/app/globals.css
@@ -119,6 +119,7 @@ table button {
 }
 /* end */
 
+
 /* Schedule Appointment -> selected step */
 .selected-container {
   @apply bg-blueSecundary text-white;
@@ -128,11 +129,13 @@ table button {
 }
 /* end */
 
+
 /* Buttons */
 .btn {
   @apply transform ease-linear duration-200 active:scale-x-[.98];
 }
 /* end */
+
 
 /* Modal */
 .customModal {
@@ -140,4 +143,20 @@ table button {
   max-width: 500px;
   width: 100%;
 }
+/* end */
+
+
+/* Spinner loading */
+.spinner {
+  @apply w-[18px] h-[18px] border-[3px] border-white/60 border-t-white rounded-full animate-spin mr-2
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 /* end */
